--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
 		<h2 id="timer"></h2>
 		<img alt="current flag" src="" />
 		<button id="next">Next</button>
+		<audio loop id="ussr anthem">
+			<source src="anthems/ussr.mp3" type="audio/mpeg">
+		</audio>
+		<audio loop id="germany anthem">
+			<source src="anthems/germany.mp3" type="audio/mpeg">
+		</audio>
+		<audio loop id="britain anthem">
+			<source src="anthems/britain.mp3" type="audio/mpeg">
+		</audio>
+		<audio loop id="japan anthem">
+			<source src="anthems/japan.mp3" type="audio/mpeg">
+		</audio>
+		<audio loop id="usa anthem">
+			<source src="anthems/usa.mp3" type="audio/mpeg">
+		</audio>
 	</body>
 </html>
