--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1 id="title"></h1>
 		<h2 id="timer"></h2>
 		<img alt="current flag" src="" />
-		<button id="next">Next</button>
+		<button id="next"></button>
 		<audio loop id="ussr anthem">
 			<source src="anthems/ussr.mp3" type="audio/mpeg">
 		</audio>
