--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1 id="title"></h1>
-		<h2 id="timer"></h2>
+		<h2 id="timer">timer</h2>
 		<img alt="current flag" src="" />
 		<button id="next"></button>
 		<audio loop id="ussr anthem">
