Update with JS shorthand
- added $(), qs(), qsa(), tag(), hide(), show() [my typical shorthand]
- made .hidden in CSS
- added #flag ID to flag
- added text "Next" to button by default

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<h1 id="title"></h1>
 		<h2 id="timer">timer</h2>
-		<img alt="current flag" src="" />
-		<button id="next"></button>
+		<img id="flag" alt="current flag" src="" />
+		<button id="next">Next</button>
 		<audio loop id="ussr anthem">
 			<source src="anthems/ussr.mp3" type="audio/mpeg">
 		</audio>
