--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<h1 id="title"></h1>
 		<h2 id="timer">timer</h2>
 		<img id="flag" alt="current flag" src="" />
-		<button id="next">Next</button>
+		<div>
+			<button id="back">Back</button>
+			<button id="next">Next</button>
+		</div>
 		<audio loop id="ussr anthem">
 			<source src="anthems/ussr.mp3" type="audio/mpeg">
 		</audio>
