New buttons & key triggers
- changed buttons to divs
- added Space for next, Backspace for back

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<h1 id="title"></h1>
 		<h2 id="timer">timer</h2>
 		<img id="flag" alt="current flag" src="" />
-		<div>
-			<button id="back">Back</button>
-			<button id="next">Next</button>
+		<div id="buttonDiv">
+			<span id="back" class="button">Back</span>
+			<span id="next" class="button">Next</span>
 		</div>
 		<audio loop id="ussr anthem">
 			<source src="anthems/ussr.mp3" type="audio/mpeg">
