--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
+		<script type="text/javascript" src="shorthand.js"></script>
 		<script type="text/javascript" src="control.js"></script>
 	</head>
 	<body>
@@ -13,20 +14,5 @@
 			<span id="back" class="button">Back</span>
 			<span id="next" class="button">Next</span>
 		</div>
-		<audio loop id="ussr anthem">
-			<source src="anthems/ussr.mp3" type="audio/mpeg">
-		</audio>
-		<audio loop id="germany anthem">
-			<source src="anthems/germany.mp3" type="audio/mpeg">
-		</audio>
-		<audio loop id="britain anthem">
-			<source src="anthems/britain.mp3" type="audio/mpeg">
-		</audio>
-		<audio loop id="japan anthem">
-			<source src="anthems/japan.mp3" type="audio/mpeg">
-		</audio>
-		<audio loop id="usa anthem">
-			<source src="anthems/usa.mp3" type="audio/mpeg">
-		</audio>
 	</body>
 </html>
