Overall time added to timer
- added "hidden" class to most elements in HTML for smoother start
- renamed next button to "Start" text in HTML
- changed timer to have both current time and overall total time
- to format each time differently, used font-weight in CSS
- factored out printTime() into both resetting and updating time
- added JS anthem looping

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<script type="text/javascript" src="control.js"></script>
 	</head>
 	<body>
-		<h1 id="title"></h1>
-		<h2 id="timer">timer</h2>
-		<img id="flag" alt="current flag" src="" />
+		<h1 id="title" class="hidden"></h1>
+		<h2 id="timer" class="hidden"><span id="currentTime"></span> (overall: <span id="totalTime"></span>)</h2>
+		<img id="flag" class="hidden" alt="current flag" src="" />
 		<div id="buttonDiv">
-			<span id="back" class="button">Back</span>
-			<span id="next" class="button">Next</span>
+			<span id="back" class="button hidden">Back</span>
+			<span id="next" class="button">Start</span>
 		</div>
 	</body>
 </html>
