--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 		<script type="text/javascript" src="control.js"></script>
 	</head>
 	<body>
-		<h1 id="title" class="hidden"></h1>
-		<h2 id="timer" class="hidden"><span id="currentTime"></span> (overall: <span id="totalTime"></span>)</h2>
-		<img id="flag" class="hidden" alt="current flag" src="" />
-		<div id="buttonDiv">
+		<div id="info" class="hidden">
+			<h1 id="title"></h1>
+			<h2 id="timer"><span id="currentTime"></span> (overall: <span 	id="totalTime"></span>)</h2>
+			<img id="flag" alt="current flag" src="" />
+		</div>
+		<div id="controls">
 			<span id="back" class="button hidden">Back</span>
-			<span id="next" class="button">Start</span>
+			<span id="control" class="button hidden">Start</span>
+			<span id="next" class="button hidden">Next</span>
 		</div>
 	</body>
 </html>
