--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div id="controls">
 			<span id="back" class="button hidden">Back</span>
 			<span id="control" class="button hidden">Start</span>
+			<span id="save" class="button hidden">Save</span>
 			<span id="next" class="button hidden">Next</span>
 		</div>
 	</body>
