--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		</div>
 		<div id="controls">
 			<span id="back" class="button hidden">Back</span>
-			<span id="control" class="button hidden">Start</span>
-			<span id="save" class="button hidden">Save</span>
+			<span id="resume" class="button">Resume</span>
+			<span id="control" class="button">Start Over</span>
 			<span id="next" class="button hidden">Next</span>
 		</div>
 	</body>
