--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
+		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/abbr.js"></script>
+		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/io.js"></script>
 		<script type="text/javascript" src="shorthand.js"></script>
 		<script type="text/javascript" src="control.js"></script>
 	</head>
