moved ajax to use jsdb

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link type="text/css" href="game.css" rel="stylesheet" />
 		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/abbr.js"></script>
 		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/io.js"></script>
-		<script type="text/javascript" src="shorthand.js"></script>
+		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/ajax.js"></script>
 		<script type="text/javascript" src="control.js"></script>
 	</head>
 	<body>
