better saving, variable resume button
- resume button is now dynamic based on save existence (fixed issue #6)
- game now saves whenever the tab closes or loses focus, rather than at pausing and refreshing (which was random & inefficient)

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</div>
 		<div id="controls">
 			<span id="back" class="button hidden">Back</span>
-			<span id="resume" class="button">Resume</span>
-			<span id="control" class="button">Start Over</span>
+			<span id="control" class="button">New Game</span>
+			<span id="resume" class="button hidden">Resume</span>
 			<span id="next" class="button hidden">Next</span>
 		</div>
 	</body>
