--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
-		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/abbr.js"></script>
-		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/io.js"></script>
-		<script type="text/javascript" src="https://brennancolberg.github.io/jsdb/ajax.js"></script>
+		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/abbr.js"></script>
+		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/io.js"></script>
+		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
 		<script type="text/javascript" src="control.js"></script>
 	</head>
 	<body>
