io.js -> cookie.js
Changed the IO function to use a more generalized version of cookie I/O in /abbr/js/, which will allow me to delete the more specialized file there that this program exclusively used before

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/abbr.js"></script>
-		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/io.js"></script>
+		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
 		<script type="text/javascript" src="control.js"></script>
 	</head>
