--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
+		<script type="text/javascript" src="control.js"></script>
+		<!-- links here are to a personal repository I prefer to use
+		in place of copy/pasting common code -->
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
-		<script type="text/javascript" src="control.js"></script>
 	</head>
 	<body>
 		<div id="info" class="hidden">
