--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
-		<script type="text/javascript" src="control.js"></script>
+		<script type="text/javascript" src="game/control.js"></script>
 		<!-- links here are to a personal repository I prefer to use
 		in place of copy/pasting common code -->
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
