--- a/navigator.html
+++ b/navigator.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="https://brennancolberg.github.io/abbr/js/ajax.js" type="text/javascript"></script>
 		<script src="https://brennancolberg.github.io/abbr/js/abbr.js" type="text/javascript"></script>
-		<script src="src/navigator.js" type="text/javascript"></script>
+		<script src="src/navigator/navigator.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div id="output"></div>
