--- a/navigator.html
+++ b/navigator.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<link href="navigator.css" type="text/css" rel="stylesheet" />
-		<script src="https://brennancolberg.github.io/abbr/js/ajax.js" type="text/javascript"></script>
-		<script src="https://brennancolberg.github.io/abbr/js/abbr.js" type="text/javascript"></script>
+		<script src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
+		<script src="https://brennancolberg.github.io/abbr/js/abbr.js"></script>
 		<script src="src/navigator/navigator.js" type="text/javascript"></script>
 	</head>
+
 	<body>
 		<div id="output"></div>
 		<div id="input"></div>
 	</body>
+
 </html>
