Parsed out anthem player into separate file
- moved all anthem-related commands from control.js into src/anthemPlayer.js
- trimmed down audio code to the bare basics

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
-		<script type="text/javascript" src="control.js"></script>
+		<script src="control.js"></script>
+		<script src="src/anthemPlayer.js"></script>
 		<!-- links here are to a personal repository I prefer to use
 		in place of copy/pasting common code -->
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
