--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
-		<script src="control.js"></script>
+		<script src="src/timer.js"></script>
 		<script src="src/anthemPlayer.js"></script>
+		<script src="control.js"></script>
 		<!-- links here are to a personal repository I prefer to use
 		in place of copy/pasting common code -->
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
