--- a/navigator.html
+++ b/navigator.html
@@ -5,7 +5,7 @@
 		<link href="navigator.css" type="text/css" rel="stylesheet" />
 		<script src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
 		<script src="https://brennancolberg.github.io/abbr/js/abbr.js"></script>
-		<script src="src/navigator/navigator.js" type="text/javascript"></script>
+		<script src="navigator.js"></script>
 	</head>
 
 	<body>
