--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Axis &amp; Allies</title>
 		<link type="text/css" href="game.css" rel="stylesheet" />
 		<script src="src/timer.js"></script>
+		<script src="src/bank.js"></script>
 		<script src="src/anthemPlayer.js"></script>
 		<script src="control.js"></script>
 		<!-- links here are to a personal repository I prefer to use
@@ -12,16 +13,6 @@
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
 	</head>
 	<body>
-		<div id="info" class="hidden">
-			<h1 id="title"></h1>
-			<h2 id="timer"><span id="currentTime"></span> (overall: <span 	id="totalTime"></span>)</h2>
-			<img id="flag" alt="current flag" src="" />
-		</div>
-		<div id="controls">
-			<span id="back" class="button hidden">Back</span>
-			<span id="control" class="button">New Game</span>
-			<span id="resume" class="button hidden">Resume</span>
-			<span id="next" class="button hidden">Next</span>
-		</div>
+		<table></table>
 	</body>
 </html>
