--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Axis &amp; Allies</title>
-		<link type="text/css" href="game.css" rel="stylesheet" />
-		<script src="src/timer.js"></script>
-		<script src="src/bank.js"></script>
-		<script src="src/anthemPlayer.js"></script>
-		<script src="control.js"></script>
-		<!-- links here are to a personal repository I prefer to use
-		in place of copy/pasting common code -->
-		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
-		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
+		<link href="index.css" rel="stylesheet" />
 	</head>
 	<body>
-		<table></table>
+		<iframe id="sidebar" src="sidebar.html"></iframe>
 	</body>
 </html>
