--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
 	<head>
 		<link href="index.css" rel="stylesheet" />
+		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
+		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
+		<script src="src/timer.js"></script>
+		<script src="src/bank.js"></script>
+		<script src="src/anthemPlayer.js"></script>
+		<script src="control.js"></script>
 	</head>
 	<body>
 		<iframe id="sidebar" src="sidebar.html"></iframe>
-		<div id="main"></div>
+		<div id="main">
+			<div id="bank">
+				<h1>Balance: <span id="balance"></span></h1>
+				<h1>Income: <span id="income"></span></h1>
+			</div>
+		</div>
 	</body>
 </html>
