"Next" button & keyboard input
note: cannot figure out how to preload the defined "current" state as the game starts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<h1>Balance: <span id="balance"></span></h1>
 				<h1>Income: <span id="income"></span></h1>
 			</div>
+			<button id="next">Next Country	</button>
 		</div>
 	</body>
 </html>
