--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="src/timer.js"></script>
 		<script src="src/bank.js"></script>
 		<script src="src/anthemPlayer.js"></script>
-		<script src="control.js"></script>
+		<script src="index.js"></script>
 	</head>
 	<body>
 		<iframe id="sidebar" src="sidebar.html"></iframe>
