some formatting & commenting

--- a/sidebar.html
+++ b/sidebar.html
@@ -5,6 +5,8 @@
 		<link type="text/css" href="sidebar.css" rel="stylesheet" />
 	</head>
 	<body>
-		<table></table>
+		<table>
+			<!-- contents auto-generated from index.js -->
+		</table>
 	</body>
 </html>
