basic withdrawal/depositing

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 				<h1>Balance: <span id="balance"></span></h1>
 				<h1>Income: <span id="income"></span></h1>
 			</div>
+			<div id="bank-io">
+				<h3>
+					Withdraw: <input type="number">
+					<button id="withdraw">Go!</button>
+				</h3>
+				<h3>
+					Deposit: <input type="number">
+					<button id="deposit">Go!</button>
+				</h3>
+			</div>
 			<button id="next">Next Country	</button>
 		</div>
 	</body>
