Unit loading & purchasing

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 					<button id="deposit">Go!</button>
 				</p>
 			</div>
+			<div id="units">
+				<section id="land"></section>
+				<section id="air"></section>
+				<section id="sea"></section>
+			</div>
 			<button id="next">Next Country	</button>
 		</div>
 	</body>
