added timer to display

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 	<body>
 		<iframe id="sidebar" src="sidebar.html"></iframe>
 		<div id="main">
+			<div id="timer">
+				<h1>
+					<span id="currentTime">00:00:00</span>
+					(<span id="overallTime">00:00:00</span> total)
+				</h1>
+			</div>
 			<div id="bank">
 				<h1>Balance: <span id="balance"></span></h1>
 				<h1>Income: <span id="income"></span></h1>
 			</div>
-			<button id="next">Next Country	</button>
+			<button id="next">Next Country</button>
 		</div>
 	</body>
 </html>
