--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<h1>Balance: <span id="balance"></span></h1>
 				<h1>Income: <span id="income"></span></h1>
 			</div>
-			<button id="next">Next Country</button>
+			<button id="next">End Turn</button>
 		</div>
 	</body>
 </html>
