made unit loading have dynamic JSON-specified categories

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 				</p>
 			</div>
 			<div id="units">
-				<section id="land"></section>
-				<section id="air"></section>
-				<section id="sea"></section>
+				<!-- auto-populated from units.json by index.js -->
 			</div>
 			<button id="next">Next Country	</button>
 		</div>
