--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Axis &amp; Allies</title>
 		<link href="index.css" rel="stylesheet" />
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
 		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
