created io.js (with AJAX and cookie methods)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<title>Axis &amp; Allies</title>
 		<link href="index.css" rel="stylesheet" />
-		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/cookie.js"></script>
-		<script type="text/javascript" src="https://brennancolberg.github.io/abbr/js/ajax.js"></script>
+		<script src="src/io.js"></script>
 		<script src="src/timer.js"></script>
 		<script src="src/bank.js"></script>
 		<script src="src/anthemPlayer.js"></script>
