added unit cart & checkout system

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 			<div id="units">
 				<!-- auto-populated from units.json by index.js -->
 			</div>
+			<div id="cart">
+				<button id="checkout">
+					Checkout (<span id="cartPrice">0</span>)
+				</button>
+				<div id="cartContents"></div>
+			</div>
 			<button id="next">Next Country	</button>
 		</div>
 	</body>
