--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 				<div id="cartContents"></div>
 			</div>
 			<button id="next">End Turn</button>
+			<button id="reset">Reset Game</button>
 		</div>
 	</body>
 </html>
