--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<iframe id="sidebar" src="sidebar.html"></iframe>
-		<div id="main">
+		<main>
 			<div id="timer">
 				<h1>
 					<span id="currentTime">00:00:00</span>
@@ -19,20 +19,16 @@
 				</h1>
 			</div>
 			<div id="bank">
-				<h1>Balance: <span id="balance"></span></h1>
-				<h1>Income: <span id="income"></span></h1>
-			</div>
-			<div id="bank-io">
-				<p>
-					Withdraw:
+				<div id="balance">
+					<h1>Balance: <span class="display"></span></h1>
 					<input type="number">
-					<button id="withdraw">Go!</button>
-				</p>
-				<p>
-					Deposit:
+					<button class="adjust">Adjust</button>
+				</div>
+				<div id="income">
+					<h1>Income: <span class="display"></span></h1>
 					<input type="number">
-					<button id="deposit">Go!</button>
-				</p>
+					<button class="adjust">Adjust</button>
+				</div>
 			</div>
 			<div id="cart">
 				<div id="units">
@@ -45,6 +41,6 @@
 			</div>
 			<button id="next">End Turn</button>
 			<button id="reset">Reset Game</button>
-		</div>
+		</main>
 	</body>
 </html>
