"conquer" option on screen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script src="src/timer.js"></script>
 		<script src="src/bank.js"></script>
 		<script src="src/anthemPlayer.js"></script>
+		<script src="src/map.js"></script>
 		<script src="index.js"></script>
 	</head>
 	<body>
@@ -29,6 +30,16 @@
 					<input type="number">
 					<button class="adjust">Adjust</button>
 				</div>
+			</div>
+			<div id="territory">
+				<div id="conquer">
+					<select></select>
+					<button>Conquer</button>
+				</div>
+				<!--<div id="lose">
+					<select></select>
+					<button>Lose</button>
+				</div>-->
 			</div>
 			<div id="cart">
 				<div id="units">
