added debug CSS to hide manual balance/income adjustments

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			<div id="bank">
 				<div id="balance">
 					<h1>Balance: <span class="display"></span></h1>
-					<input type="number">
-					<button class="adjust">Adjust</button>
+					<input class="debug" type="number">
+					<button class="debug adjust">Adjust</button>
 				</div>
 				<div id="income">
 					<h1>Income: <span class="display"></span></h1>
-					<input type="number">
-					<button class="adjust">Adjust</button>
+					<input class="debug" type="number">
+					<button class="debug adjust">Adjust</button>
 				</div>
 			</div>
 			<div id="territory">
