changed vw measurements to px
also screwed up flex formatting inadvertently, will deal with that can of worms later

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 				</button>
 				<div id="cartContents"></div>
 			</div>
-			<button id="next">End Turn</button>
+			<div>
+				<h1 id="next">End Turn</h1>
+			</div>
 			<button id="reset">Reset Game</button>
 		</main>
 	</body>
