--- a/index.html
+++ b/index.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Axis &amp; Allies</title>
-		<link href="index.css" rel="stylesheet" />
-		<script src="src/io.js"></script>
-		<script src="src/timer.js"></script>
-		<script src="src/bank.js"></script>
-		<script src="src/anthemPlayer.js"></script>
-		<script src="src/map.js"></script>
-		<script src="index.js"></script>
-	</head>
-	<body>
-		<iframe id="sidebar" src="sidebar.html"></iframe>
-		<main>
-			<div id="timer">
-				<h1>
-					<span id="currentTime">00:00:00</span>
-					(<span id="overallTime">00:00:00</span> total)
-				</h1>
+
+<head>
+	<title>Axis &amp; Allies</title>
+	<link href="index.css" rel="stylesheet" />
+	<script src="src/io.js"></script>
+	<script src="src/timer.js"></script>
+	<script src="src/bank.js"></script>
+	<script src="src/anthemPlayer.js"></script>
+	<script src="src/map.js"></script>
+	<script src="index.js"></script>
+</head>
+
+<body>
+	<iframe id="sidebar" src="sidebar.html"></iframe>
+	<main>
+		<div id="timer">
+			<h1>
+				<span id="currentTime">00:00:00</span>
+				(<span id="overallTime">00:00:00</span> total)
+			</h1>
+		</div>
+		<div id="bank">
+			<div id="balance">
+				<h1>Balance: <span class="display"></span></h1>
+				<input class="debug" type="number">
+				<button class="debug adjust">Adjust</button>
 			</div>
-			<div id="bank">
-				<div id="balance">
-					<h1>Balance: <span class="display"></span></h1>
-					<input class="debug" type="number">
-					<button class="debug adjust">Adjust</button>
-				</div>
-				<div id="income">
-					<h1>Income: <span class="display"></span></h1>
-					<input class="debug" type="number">
-					<button class="debug adjust">Adjust</button>
-				</div>
+			<div id="income">
+				<h1>Income: <span class="display"></span></h1>
+				<input class="debug" type="number">
+				<button class="debug adjust">Adjust</button>
 			</div>
-			<div id="territory">
-				<div id="conquer">
-					<select></select>
-					<button>Conquer</button>
-				</div>
-				<!--<div id="lose">
+		</div>
+		<div id="territory">
+			<div id="conquer">
+				<select></select>
+				<button>Conquer</button>
+			</div>
+			<!--<div id="lose">
 					<select></select>
 					<button>Lose</button>
 				</div>-->
+		</div>
+		<div id="cart">
+			<div id="units">
+				<!-- auto-populated from units.json by index.js -->
 			</div>
-			<div id="cart">
-				<div id="units">
-					<!-- auto-populated from units.json by index.js -->
-				</div>
-				<button id="checkout">
-					Checkout (<span id="cartPrice">0</span>)
-				</button>
-				<div id="cartContents"></div>
-			</div>
-			<button id="next">End Turn</button>
-			<button id="reset">Reset Game</button>
-		</main>
-	</body>
+			<button id="checkout">
+				Checkout (<span id="cartPrice">0</span>)
+			</button>
+			<div id="cartContents"></div>
+		</div>
+		<audio controls loop id="anthemPlayer">
+			<source id="anthemSource" src="" type="audio/mpeg">
+		</audio>
+		<button id="next">End Turn</button>
+		<button id="reset">Reset Game</button>
+	</main>
+</body>
+
 </html>
